Subscription page working, probably some bugs, but major routes covered

--- a/app/assets/stylesheets/subscriptions.css.scss
+++ b/app/assets/stylesheets/subscriptions.css.scss
@@ -62,6 +62,15 @@
     }
 }
 
+[class*="e-liquid-box-"] {
+    text-align: center;
+    margin-bottom: 20px;
+    img {
+        padding-bottom: 5px;
+    }
+}
+
 #showMeTheMoney {
-    margin-top: 20px;
+    margin: 0 auto;
+    display: block;
 }
